objects/MMPJ_TOPG_ProjectMilestone__c.object
<CustomObject>
    <description>Used for MMPJ TopGun app</description>
    <fields>
        <fullName>MMPJ_TOPG_A__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>A</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_C__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>C</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Date__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_DeliverableDescription__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Deliverable/Description</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Flag__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <formula>IF ( ISPICKVAL(MMPJ_TOPG_MMPJ_Status__c, &apos;Done/Go&apos;), &quot;GreenFlag&quot; , IF (ISPICKVAL(MMPJ_TOPG_MMPJ_Status__c, &apos;No Go&apos;), &quot;RedFlag&quot; , &quot;Greyflag&quot;))</formula>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_I__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>I</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MMPJ_TOPG_IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_MMPJ_Status__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Done/Go</fullName>
                </value>
                <value>
                    <fullName>No Go</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_MilestoneTitle__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Milestone Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used for the TOP GUN Project</description>
        <label>Project</label>
        <referenceTo>MMPJ_TOPG_Project__c</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_R__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>R</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Rank__c</fullName>
        <description>Ordering the project milestones related list.</description>
        <label>MMPJ_TOPG_Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_RemainingTime__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <formula>IF(MMPJ_TOPG_Date__c - TODAY() &lt;= 0 , 0 , MMPJ_TOPG_Date__c - TODAY())</formula>
        <label>Remaining Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>